Add naive implementation for all functionality

--- a/GiftCertificates/persistence/build.gradle
+++ b/GiftCertificates/persistence/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     // https://mvnrepository.com/artifact/com.h2database/h2
     testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
 
-    compile project(':core')
+    compile project(':model')
 
 }
 
