--- a/GiftCertificates/build.gradle
+++ b/GiftCertificates/build.gradle
@@ -12,6 +12,7 @@ repositories {
 }
 
 dependencies {
+
     // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
 
@@ -19,6 +20,8 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-webmvc', version: '5.2.9.RELEASE'
 
     compile group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.0.11.RELEASE'
+
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.3'
 
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 
