--- a/GiftCertificates/build.gradle
+++ b/GiftCertificates/build.gradle
@@ -18,8 +18,8 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
     compile group: 'org.springframework', name: 'spring-webmvc', version: '5.2.9.RELEASE'
-
-    compile group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.0.11.RELEASE'
+//
+//    compile group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.0.11.RELEASE'
 
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.3'
 
