--- a/module_2/GiftCertificates/build.gradle
+++ b/module_2/GiftCertificates/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'war'
 }
 
-compileJava.options.encoding = 'UTF-8'
 group 'com.epam.esm.schepov'
 version '1.0-SNAPSHOT'
 
@@ -13,14 +12,13 @@ repositories {
 
 dependencies {
 
-    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
 
-    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
     compile group: 'org.springframework', name: 'spring-webmvc', version: '5.2.9.RELEASE'
-//
-//    compile group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.0.11.RELEASE'
+
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'
+
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.3'
 
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
 
